adding rimraf to clean dist folder

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tsc-build": "tsc",
+    "tsc-build": "rimraf ./dist && tsc",
     "ng-build-dev": "npm run build-dev --prefix ../client",
     "ng-build-prod": "npm run build-prod --prefix ../client"
   },
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/mongoose": "^5.7.32",
     "@types/node": "^14.0.26",
+    "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "typescript": "^3.9.7"
