adding dependency injection library 'inversify'

--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,12 @@
     "express-validator": "^6.6.1",
     "handlebars": "^4.7.6",
     "http-status-codes": "^1.4.0",
+    "inversify": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.24",
     "node-cache": "^5.1.2",
+    "reflect-metadata": "^0.1.13",
     "sanitize-html": "^1.27.0",
     "socket.io": "^2.3.0",
     "uuid": "^8.2.0"
