--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,16 +4,18 @@
         "baseUrl": "./",
         "sourceMap": true,
         "declaration": false,
-        "downlevelIteration": true,
         "experimentalDecorators": true,
+        "downlevelIteration": true,
+        "emitDecoratorMetadata": true,
         "module": "CommonJS",
         "moduleResolution": "node",
         "importHelpers": true,
-        "target": "es2015",
+        "target": "es5",
+        "lib": ["es6"],
         "typeRoots": [
             "node_modules/@types"
         ],
-        "types": [ "node" ]
+        "types": [ "node", "reflect-metadata" ]
     },
     "files": [
         "src/server.ts",
