--- a/server/package.json
+++ b/server/package.json
@@ -18,10 +18,10 @@
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "express-validator": "^6.6.1",
     "handlebars": "^4.7.6",
     "http-status-codes": "^1.4.0",
     "inversify": "^5.0.1",
+    "inversify-express-utils": "^6.3.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.24",
