--- a/server/package.json
+++ b/server/package.json
@@ -9,37 +9,42 @@
     "client-watch": "npm run build-dev --prefix ../client",
     "ng-build-prod": "npm run build-prod --prefix ../client",
     "tsc-build": "rimraf ./dist && tsc",
-    "test": "mocha -r ts-node/register 'src/tests/**/*.spec.ts'"
+    "test": "mocha -r ts-node/register 'src/tests/**/*.spec.ts'",
+    "start": "set LogLevel=DEBUG && ts-node ./src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.0",
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
     "http-status-codes": "^1.4.0",
     "inversify": "^5.0.1",
     "inversify-express-utils": "^6.3.2",
+    "inversify-socket-utils": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.24",
     "node-cache": "^5.1.2",
     "reflect-metadata": "^0.1.13",
     "sanitize-html": "^1.27.0",
-    "socket.io": "^2.3.0",
+    "socket.io": "^3.0.4",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.12",
+    "@types/chalk": "^2.2.0",
     "@types/cookie": "^0.4.0",
     "@types/express": "^4.17.7",
     "@types/lodash": "^4.14.158",
     "@types/mocha": "^8.0.2",
     "@types/mongoose": "^5.7.32",
     "@types/node": "^14.0.26",
-    "@types/socket.io": "^2.1.10",
+    "@types/socket.io": "^2.1.12",
     "chai": "^4.2.0",
     "mocha": "^8.1.1",
     "npm-run-all": "^4.1.5",
