--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,9 @@
     "@types/chai": "^4.2.12",
     "@types/chalk": "^2.2.0",
     "@types/cookie": "^0.4.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.7",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.158",
     "@types/mocha": "^8.0.2",
     "@types/mongoose": "^5.7.32",
