--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "client-watch": "npm run build-dev --prefix ../client",
     "ng-build-prod": "npm run build-prod --prefix ../client",
     "tsc-build": "rimraf ./dist && tsc",
-    "test": "mocha -r ts-node/register 'src/tests/**/*.spec.ts'",
+    "test": "mocha --require ts-node/register tests/**/*.spec.ts",
     "start": "set LogLevel=DEBUG && ts-node ./src/index.ts"
   },
   "keywords": [],
@@ -31,6 +31,7 @@
     "mongoose": "^5.9.24",
     "node-cache": "^5.1.2",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.2",
     "sanitize-html": "^1.27.0",
     "socket.io": "^3.0.4",
     "uuid": "^8.2.0"
@@ -46,11 +47,15 @@
     "@types/mocha": "^8.0.2",
     "@types/mongoose": "^5.7.32",
     "@types/node": "^14.0.26",
+    "@types/request": "^2.48.5",
+    "@types/sinon": "^9.0.10",
     "@types/socket.io": "^2.1.12",
     "chai": "^4.2.0",
     "mocha": "^8.1.1",
     "npm-run-all": "^4.1.5",
+    "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
+    "sinon": "^9.2.4",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "typescript": "^3.9.7"
