--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "ng-build-prod": "npm run build-prod --prefix ../client",
     "tsc-build": "rimraf ./dist && tsc",
     "test": "mocha --require ts-node/register tests/**/*.spec.ts",
-    "start": "set LogLevel=DEBUG && ts-node ./src/index.ts"
+    "start": "set LogLevel=DEBUG && ts-node ./src/index.ts",
+    "lint":"pretty-quick --staged && lint-staged"
   },
   "keywords": [],
   "author": "",
@@ -50,14 +51,31 @@
     "@types/request": "^2.48.5",
     "@types/sinon": "^9.0.10",
     "@types/socket.io": "^2.1.12",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "chai": "^4.2.0",
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "lint-staged": "^10.5.4",
     "mocha": "^8.1.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "rimraf": "^3.0.2",
+    "simple-git-hooks": "^2.2.0",
     "sinon": "^9.2.4",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "typescript": "^3.9.7"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint"
+  },
+  "lint-staged": {
+    "*.{ts,js}": "eslint --cache --fix"
   }
 }
