--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -7,17 +7,22 @@
     "airbnb-base",
     "plugin:import/errors",
     "plugin:import/warnings",
-    "plugin:import/typescript"
+    "plugin:import/typescript",
+    "prettier",
+    "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
     "prettier/prettier": "error",
-    "no-console": "off",
+    "no-debugger": "error",
+    "no-console": "error",
+    "no-alert": "error",
+    "no-empty-function": "error",
     "import/extensions": [
       "error",
       "ignorePackages",
